--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "typeface-open-sans": "^1.1.13",
+    "typeface-roboto": "^1.1.13",
     "uuid": "^8.3.2"
   },
   "scripts": {
